--- a/index.html
+++ b/index.html
@@ -15,52 +15,58 @@
 
   <body>
     <section>
-      <nav>
-        <h4>developedbyNavjot</h4>
-        <a class="button">Sign Up</a>
-      </nav>
+      <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <div class="container">
+            <div class="main" id="navbarResponsive">
+                <!-- <a class="navbar-nav text-uppercase ms-auto py-4 py-lg-0"> -->
+                    <a class="nav-link" href="#about">About</a>
+                        <a class="nav-link" href="#journey">Journey</a>
+                        <a class="nav-link" href="#contact">Contact</a>
+            </div>
+        </div>
+    </nav>
       <div class="container">
-        <h2 class="main-title">Explore.</h2>
-        <img src="./bg1.png" class="bg1" alt="" />
-        <img src="./girl1.png" class="girl" alt="" />
-        <img src="./rock1.png" class="rock" alt="" />
+        <h2 class="main-title">Navjot Rathee</h2>
+        <img src="./img7.jpg" class="bg1" alt="" />
+        <!-- <img src="./img7.png" class="girl" alt="" /> -->
+        <!-- <img src="./rock1.png" class="rock" alt="" /> -->
       </div>
       <div class="content">
         <div class="content-images">
           <div>
-            <img src="./switzleft.png" alt="" />
-            <h4>Switzerland</h4>
-            <h3>Mountains of tibidabo</h3>
+            <img src="./img5.jpg" class="about" alt="" />
+            <h4 class="h4">About</h4>
+            
           </div>
           <div>
-            <img src="./switzright.png" alt="" />
+            <img src="./img4.jpg" alt="" />
             <h4>Switzerland</h4>
             <h3>Mountains of tibidabo</h3>
           </div>
         </div>
-        <p class="text">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere neque
-          consequuntur a nisi, illo quia cupiditate fuga et eos minima
-          voluptatum cum dolorum quas repellat eaque beatae vitae veritatis
-          quae.
-        </p>
-        <p class="text">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facere neque
-          consequuntur a nisi, illo quia cupiditate fuga et eos minima
-          voluptatum cum dolorum quas repellat eaque beatae vitae veritatis
-          quae.
-        </p>
+        <div class="container2">
+          <div class="text-center3">
+              <h2 class="section-heading text-uppercase">About Me</h2>
+              <p class="text-muted">Full-Stack Developer & Designer.</p> 
+              <br>Deeply passionate about User Experience, Open-Source & Software Innovations.
+              <br>I believe in the power of community.</p>
+              <p class = "text muted"> <br></p>
+      
+          </div>
+          </div>
+      </div>
       </div>
     </section>
+  
    
 
-    <script
+    <!-- <script
       src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"
       integrity="sha512-cdV6j5t5o24hkSciVrb8Ki6FveC2SgwGfLE31+ZQRHAeSRxYhAQskLkq3dLm8ZcWe1N3vBOEYmmbhzf7NTtFFQ=="
       crossorigin="anonymous"
     ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.js"></script>
-    <script src="./script.js"></script>
+    <script src="./script.js"></script> -->
   </body>
 </html>
